Added user can view all expenses feature. (#33)
Fixed ExpensesController#create spec failing due to a change in serialzier.
