# app/controllers/api/expenses_controller.rb
@@ -1,13 +1,16 @@
 module Api
   class ExpensesController < ApiController
+    def index
+      expenses = current_user.expenses
+      render json: ExpenseSerializer.new(expenses)
+    end
+
     def create
       expense = Expense.new(expense_params)
       return render_error(expense.errors.messages, :unprocessable_entity) \
         unless expense.save
 
-      render json: ExpenseSerializer.new(
-        expense, include: [:expense_category]
-      ), status: :created
+      render json: ExpenseSerializer.new(expense), status: :created
     end
 
     private
