# swagger/v1/swagger.json
@@ -114,6 +114,31 @@
             "description": "returns unprocessable entity error"
           }
         }
+      },
+      "get": {
+        "summary": "All expenses of the user",
+        "tags": [
+          "Expenses"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "returns all expenses of the user"
+          }
+        }
       }
     },
     "/signup": {
